--- a/workers/index.html
+++ b/workers/index.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+<html dir="rtl" lang="ar">
+<head>
+<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<link rel="icon" href=""> <!--  -->
+<title>قائمة أسماء العاملين على مشروع MG 1.2</title> 
+<style>
+button{
+margin:20px;
+}
+</style>
+</head>
+<body>
+<h3>
+💡 اضغط على اسم العضو لترى قائمة بمهامه:
+</h3>
+<br>
+<center>
+<button onclick="document.location.href='a.f-tasks.html'">عبدالله فائز الشهري</button>
+<button onclick="document.location.href='m.a-tasks.html'">محمد علي الحارثي</button>
+<button onclick="document.location.href='s.f-tasks.html'">سلطان فهد المطيري</button>
+<button onclick="document.location.href='t.f-tasks.html'">طلال فهد الجندول</button>
+<button onclick="document.location.href='b.t-tasks.html'">بتال طارق الهندي</button>
+<button onclick="document.location.href='b.f-tasks.html'">بدر فراس آل مطلق</button>
+<button onclick="document.location.href='n.m-tasks.html'">نوار محمد الشلوي</button>
+<button onclick="document.location.href='e.a-tasks.html'">إبراهيم علي الشايع</button>
+<button onclick="document.location.href='a.e-tasks.html'">البراء إبراهيم الرشيدي</button>
+<button onclick="document.location.href='d.e-tasks.html'">ضيف الله عيضة العدواني</button>
+<button onclick="document.location.href='s.m-tasks.html'">سليمان محمد النشوان</button>
+<button onclick="document.location.href='s.k-tasks.html'">سليمان إيهاب خليل</button>
+</center>
+<div style="height:100px;"></div>
+<img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/الساحة العلمية.png" alt="" width="150px" height="150px">
+<script>
 
+</script>
+</body>
+</html>
