--- a/workers/index.html
+++ b/workers/index.html
@@ -29,8 +29,19 @@ margin:20px;
 <button onclick="document.location.href='d.e-tasks.html'">ضيف الله عيضة العدواني</button>
 <button onclick="document.location.href='s.m-tasks.html'">سليمان محمد النشوان</button>
 <button onclick="document.location.href='s.k-tasks.html'">سليمان إيهاب خليل</button>
+<br><br>
+<h5>* ملاحظات:
+<br><br>
+١. بعض المهام تم العمل عليها أكثر من مرة ولكن بأعضاء مختلفين، وذلك للتأكد من صحة النتيجة النهائية من العمل.
+<br><br>
+٢. ترجمة التعبيرات أصعب بكثير مما هي عليه في ترجمة المفردات.
+<br><br>
+٣. توقع عدد الساعات التطوعية في هذا الموقع: هو مجرد توقع مبني على تجارب للأعمال التطوعية، وتقدير عدد الساعات التي استغرقته تلك التجارب، ومن ثَم قياسها على أعمال الأعضاء.
+</h5>
+<br>
+<button onclick="document.location.href='https://bit.ly/MG-1-2'">اضغط هنا لرؤية المشروع (المبادرة التطوعية)</button>
 </center>
-<div style="height:100px;"></div>
+<div style="height:80px;"></div>
 <img src="https://alsaha-alelmiya.github.io/Hosting-e-ss/الساحة العلمية.png" alt="" width="150px" height="150px">
 <script>
 
